# med_aerial_challenge_launch

./: CMakeLists.txt  med_uav_control.kdev4  package.xml
.kdev4/: med_uav_control.kdev4
launch/: bebop_joy_override.launch  bebop_optitrack.launch  med_aerial.launch
scripts/: vrpn_transformer.py
