<?xml version="1.0"?>
<package>
  <name>med_aerial_challenge_launch</name>
  <version>0.0.0</version>
  <description>The med_aerial_challenge_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="antun.ivanovic@gmail.com">Antun Ivanovic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
